# DAT205.Pathtracers

./: README.md
scenes/: BigSphere.mtl
src/EmbreePathtracer/: CMakeLists.txt  HDRImage.cpp  HDRImage.h  Pathtracer.cpp  Pathtracer.h  embree.cpp  embree.h  main.cpp  material.cpp  material.h  sampling.cpp  sampling.h  simple.frag
src/OptixPathtracer/: CMakeLists.txt  brdf_helper.cu  common.h  helpers.h  pathtracer.cu  pathtracerGPU.cpp
